crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__missing_lhs.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bool_op/missing_lhs.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        range: 0..5,
        body: [
            Expr(
                StmtExpr {
                    range: 4..5,
                    value: Name(
                        ExprName {
                            range: 4..5,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | and y
  | ^^^ Syntax Error: Expected a statement
  |
